<resources>
    <string name="app_name">WeatherApp</string>
    <string name="settings_title">Settings</string>
    <string name="min_temp_message">Min Temp</string>
    <string name="max_temp_message">Max Temp</string>
    <string name="button_send">Settings</string>
    <string name="button_refresh">Notify</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_temperature_title">Temperature Notification Settings</string>
    <string name="pref_min_temp">Minimum Comfortable Temperature</string>
    <string name="pref_min_temp_default">50</string>
    <string name="pref_max_temp">Maximum Comfortable Temperature</string>
    <string name="pref_max_temp_default">75</string>

    <string name="pref_precipitation_title">Precipitation Notification Settings</string>
    <string name="pref_drizzle">Drizzle</string>
    <string name="pref_rain">Rain</string>
    <string name="pref_snow">Snow</string>
    <string name="pref_fog">Fog</string>
    <string name="pref_hail">Hail</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
